grid template created with grid display

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-.innerDiv {
-  display: inline-block;
-  height: 2px;
-  width: 2px;
+.container {
+  display: grid;
+  height: 650px;
+  width: 650px;
+  border: 1px solid black;
+}
+
+.grid-item {
   border: 1px solid black;
 }
